fix: rename query parameter pathSuffix to path
